# mudl

./: .env.example  .gitignore  ARCHITECTURE.md  BUILDER.md  COMMANDS.md  Cargo.toml  LANGUAGE.md  MODULES.md  Makefile  OBJECT_MODEL.md  README.md  SECURITY.md  slack-app-manifest.yaml
docs/: IRC.md  REPL.md  SLACK.md
examples/: README.md
modules/default/: README.md  config.mudl  universe.mudl
scripts/: slack-mock-flow.sh
src/: env.rs  lib.rs
src/command/: dispatcher.rs  editor.rs  mod.rs  parse.rs  place.rs  player_input.rs  trigger.rs
src/core/: display.rs  inventory.rs  mod.rs  object.rs
src/creature/: ai.rs  behavior.rs  combat.rs  conditions.rs  effects.rs  equipment.rs  mod.rs  progression.rs  spawner.rs  stats.rs  tactics.rs  vitality.rs
src/display/: body_plan.rs  carried.rs  container.rs  creature.rs  equipment.rs  examine.rs  examine_target.rs  grammar.rs  mod.rs  narrative.rs  object_look.rs  readable.rs  resolve.rs  room_look.rs  self_examine.rs  stackable.rs  weight.rs
src/gateway/: auto_login.rs  edge_cases.rs  load.rs  login_auth.rs  m5_scenarios.rs  m6_multi_user.rs  m6_scenarios.rs  mod.rs  multi_user.rs  open_delivery.rs  persistence.rs  play_mode.rs  rate_limit.rs  rbac.rs  registration.rs  registry.rs  session_manager.rs
src/inventory/: mod.rs
src/irc/: bot.rs  capability.rs  channels.rs  config.rs  connect.rs  dispatch.rs  identity.rs  input.rs  message.rs  mod.rs  nick.rs  nickserv.rs  reconnect.rs  runner.rs  social.rs  transport.rs  visibility.rs
src/loot/: mod.rs  spawner.rs
src/mudl/: anatomy.rs  behavior_def.rs  behavior_line.rs  item_def.rs  loader.rs  mod.rs  (+8 more)
(+102 files in other folders)
