[package]
name = "mudl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.80"
bitflags = { version = "2.6", features = ["serde"] }
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
