[package]
name = "mudl"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[[bin]]
name = "irc"
path = "src/bin/irc.rs"

[[bin]]
name = "slack"
path = "src/bin/slack.rs"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.80"
axum = "0.7"
hmac = "0.12"
sha2 = "0.10"
bitflags = { version = "2.6", features = ["serde"] }
dotenv = "0.15"
fs2 = "0.4"
pest = "2.8.6"
pest_derive = "2.8.6"
rustyline = "14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = "2.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
